# Quiksight

./: .gitignore  Dockerfile  Procfile  followup.ipynb  main.py  pyproject.toml  quiksight.todo  requirements.txt  tailwind.config.ts
api_training/: .env  analyze_dataframe.py  call_gemini.py  config.py  data_context.py  data_dictionary.py  file_path.py
api_training2/: .env  analyze_dataframe.py  call_gemini.py  config.py  data_context.py  data_dictionary.py  file_path.py  followup.ipynb
app_quiksight/: __init__.py  main.py  test_analyze.py
app_quiksight/routes/: auth.py  chat.py  tempCodeRunnerFile.py  upload.py
app_quiksight/services/: __init__.py  analyze.py  data_overview.py  missing_data_analysis.py  reader.py
app_quiksight/static/css/: chat.css  home.css  results.css
app_quiksight/static/js/: chat.js  results.js  upload.js
app_quiksight/storage/: auth_deps.py  redis.py  supabase_client.py
app_quiksight/templates/: chat.html  home.html  login.html  results.html  signup.html
fastapilearn/: READme.md  pyvenv.cfg
fastapilearn/Scripts/: activate  activate.bat
quiksight_env/: pyvenv.cfg
quiksight_env/Scripts/: activate  activate.bat  runxlrd.py
