[project]
name = "quiksight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "deprecation==2.1.0",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "et-xmlfile==2.0.0",
    "fastapi[standard]==0.115.12",
    "fastapi-users==14.0.1",
    "fastapi-users-db-sqlalchemy==7.0.0",
    "frozenlist==1.5.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.2",
    "google-api-python-client==2.166.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-genai==1.29.0",
    "google-generativeai==0.8.4",
    "googleapis-common-protos==1.69.2",
    "gotrue==2.12.0",
    "greenlet==3.1.1",
    "grpcio==1.72.0rc1",
    "grpcio-status==1.71.0",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml==6.0.1",
    "makefun==1.15.6",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "multidict==6.2.0",
    "numpy==2.2.4",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pluggy==1.5.0",
    "postgrest==1.0.1",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "psycopg2-binary==2.9.10",
    "pwdlib==0.2.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyjwt==2.10.1",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "realtime==2.4.2",
    "redis==6.4.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rsa==4.9",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.46.1",
    "storage3==0.11.3",
    "strenum==0.4.15",
    "supabase==2.15.0",
    "supafunc==0.9.4",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "uvicorn==0.34.0",
    "websockets==14.2",
    "xlrd==2.0.1",
    "yarl==1.19.0",
    "google>=3.0.0",
    "python-calamine>=0.6.1",
    "psutil>=7.2.1",
]

[tool.setuptools.packages.find]
include = ["app_quiksight*"]

